<resources>
    <string name="app_name">Go Read Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Go Read Library</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textview" />
    <string name="string_textview" />
    <string name="textviewLastName">Last</string>
    <string name="TextViewBy">By</string>
    <string name="textviewTitle">Title</string>
    <string name="textviewFirstName">First</string>
    <string name="action_title_sort">Sort by Title</string>
    <string name="action_author_sort">Sort by Author</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_title">Login</string>
    <string name="textviewUserName">Username</string>
    <string name="textviewPass">Password</string>
    <string name="textviewLogout">Do you want to log out?</string>
    <string name="action_addBook">add</string>
</resources>
